@@ -2,12 +2,12 @@
 
 AUTOMAKE_OPTIONS = 1.4 foreign
 
-EXTRA_DIST = convertrpmrc.sh find-lang.sh freshen.sh getpo.sh
+EXTRA_DIST = convertrpmrc.sh find-lang.sh freshen.sh getpo.sh vpkg-provides.sh
 
 installprefix = $(DESTDIR)
 
 all:
 
 configdir = ${prefix}/lib/rpm
-config_SCRIPTS = convertrpmrc.sh find-lang.sh freshen.sh getpo.sh
+config_SCRIPTS = convertrpmrc.sh find-lang.sh freshen.sh getpo.sh vpkg-provides.sh
 
