@@ -5,6 +5,7 @@
 	- fix: bigendian's with longlong file sizes (e.g. IRIX) dinna work.
 	- move printDep* routines into rpmlib for gnorpm et al.
 	- updated ru translation (Sergey Kubushin).
+	- add vpkg-provides.sh (Tim Mooney).
 
 3.0 -> 3.0.1
 	- fix: %verifyscript resurrected (Shing-Gene Yung).
